# Polygon

./: .gitignore  CMakeLists.txt  README.md  main.cpp
engine/: CMakeLists.txt  CMakeLists.txt.autosave  IndexBuffer.cpp  IndexBuffer.h  Logger.cpp  Logger.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h  Vector2f.cpp  Vector2f.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h
files/: a.txt  diffi.txt  easy.txt  easyTri.txt  hard.txt  polygon.txt  rec.txt  snake.txt  tri.txt
glew/src/: glew.c
res/files/elements/: base.txt  easy.txt  first.txt  hard.txt  medium.txt  snake.txt  tri.txt
res/files/polygons/: base.txt  easy.txt  first.txt  medium.txt  rec.txt  snake.txt  tri.txt
res/other/: ideas.txt
src/: Application.cpp  Application.h  Console.cpp  Console.h  Element.cpp  Element.h  Intersector.cpp  Intersector.h  Intersector1D1D.h  Loader.cpp  Loader.h  Mesh.cpp  Mesh.h  Network.cpp  Network.h  Polygon.cpp  Polygon.h  Segment.cpp  Segment.h
